--- a/Examples/01_SimplePicDemo/Boards/NUCLEO_L073RZ/Projects/MDK_ARM/RTE/Device/STM32L073RZTx/STCubeGenerated/STCubeGenerated.ioc
+++ b/Examples/01_SimplePicDemo/Boards/NUCLEO_L073RZ/Projects/MDK_ARM/RTE/Device/STM32L073RZTx/STCubeGenerated/STCubeGenerated.ioc
@@ -3,19 +3,34 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L073RZT3
 Mcu.Family=STM32L0
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP2=SPI1
+Mcu.IP3=SYS
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PH0-OSC_IN
-Mcu.Pin1=VP_SYS_VS_Systick
-Mcu.PinsNb=2
+Mcu.Pin0=PC13
+Mcu.Pin1=PH0-OSC_IN
+Mcu.Pin10=PA14
+Mcu.Pin11=PB3
+Mcu.Pin12=PB4
+Mcu.Pin13=PB5
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin2=PA2
+Mcu.Pin3=PA3
+Mcu.Pin4=PA5
+Mcu.Pin5=PB10
+Mcu.Pin6=PA8
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -27,6 +42,48 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:false\:false\:true\:false
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=VFD_HV
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_SWCLK
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=USER_LED
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=VFD_LAT
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=VFD_BLK
+PA9.Locked=true
+PA9.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=VFD_EF
+PB10.Locked=true
+PB10.Signal=GPIO_Output
+PB3.Locked=true
+PB3.Mode=Full_Duplex_Master
+PB3.Signal=SPI1_SCK
+PB4.Locked=true
+PB4.Mode=Full_Duplex_Master
+PB4.Signal=SPI1_MISO
+PB5.Locked=true
+PB5.Mode=Full_Duplex_Master
+PB5.Signal=SPI1_MOSI
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=USER_BUTTON
+PC13.Locked=true
+PC13.Signal=GPXTI13
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PinOutPanel.RotationAngle=0
@@ -60,7 +117,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-true-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48CLKFreq_Value=32000000
 RCC.48RNGFreq_Value=32000000
 RCC.48USBFreq_Value=32000000
@@ -100,6 +157,18 @@ RCC.USART2Freq_Value=32000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=64000000
 RCC.WatchDogFreq_Value=37000
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CalculateBaudRate=4.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
+USART2.IPParameters=VirtualMode-Asynchronous
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
