First successfull try (wrong image bitmap though) Signed-off-by: Maxim Hodnenko <testingon2022@gmail.com>

--- a/Examples/01_SimplePicDemo/Boards/NUCLEO_L073RZ/Projects/MDK_ARM/RTE/Device/STM32L073RZTx/STCubeGenerated/STCubeGenerated.ioc
+++ b/Examples/01_SimplePicDemo/Boards/NUCLEO_L073RZ/Projects/MDK_ARM/RTE/Device/STM32L073RZTx/STCubeGenerated/STCubeGenerated.ioc
@@ -40,6 +40,7 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:false\:false\:true\:false
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -71,12 +72,18 @@ PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=VFD_EF
 PB10.Locked=true
 PB10.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_PuPd
+PB3.GPIO_PuPd=GPIO_PULLUP
 PB3.Locked=true
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI1_SCK
+PB4.GPIOParameters=GPIO_PuPd
+PB4.GPIO_PuPd=GPIO_PULLUP
 PB4.Locked=true
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=SPI1_MISO
+PB5.GPIOParameters=GPIO_PuPd
+PB5.GPIO_PuPd=GPIO_PULLUP
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
